@@ -35,10 +35,6 @@
       <implements interface="eea.themecentre.interfaces.IThemeTaggable" />
     </class>
 
-  <class class="Products.PloneRSSPortlet.content.RSSFeed.RSSFeedRecipe">
-      <implements interface="eea.themecentre.interfaces.IThemeTaggable" />
-  </class>
-
   <adapter factory=".themetaggable.ThemeTaggable" />
   <adapter
       provides=".interfaces.IMainThemeTagging"
